--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 <body>
 <div id="app"></div>
 
+<noscript>JavaScript must be enabled to take full advantage of this site's features.</noscript>
 <script type="text/javascript" src="/static/bundle/app.js"></script>
 </body>
 </html>
